Xfce 4.6beta1 (Xfce 4.5.91)
===========================

  * Remove xfsettingsd (moved to xfce4-settings package).  This removes
    xfconf's gtk+ dependency entirely.
  * Add xfconf_channel_get() which returns an XfconfChannel singleton
    object that lives until calling xfconf_shutdown().
  * Add xfconf_channel_reset_property(), which is a replacement for the
    'remove' functions.  This more accurately describes what 'remove'
    actually does in the presence of locked properties and/or properties
    that have system-wide defaults.
  * Deprecate xfconf_channel_remove_property() and
    xfconf_channel_remove_properties().
  * Change D-Bus interface to reflect above two changes.
  * Add IsPropertyLocked() to the D-Bus interface, as well as a
    corresponding xfconf_channel_is_property_locked() libxfconf function,
    which allows clients to query whether or not a property can be
    modified.
  * Don't send out a PropertyChange signal if a property is set to the
    value it already held.
  * Fix daemon crash when resetting properties recursively.
  * Fix daemon sending incorrect property names in the PropertyRemoved
    signal when removing multiple properties at once.
  * For GObject property bindings, if the bound xfconf property is
    removed from the config store, try to reset the GObject property
    to the default value specified in its GParamSpec.
  * Add -R option to xfconf-query which causes the -r option (reset) to
    operate recursively to include all properties under the specified
    property.
  * Add -a option to xfconf-query which forces setting a property as an
    array even if the array only has one element.

Xfce 4.6alpha (Xfce 4.5.90)
===========================

  * Initial release.  There are bugs, and the API and ABI are not frozen.